--- a/romsem.tj/html/index.html
+++ b/romsem.tj/html/index.html
@@ -339,7 +339,7 @@
                <div class="box smallBox smallBox02">
                   <p>Корн дог</p>
                </div>
-               <div class="box bigBox bigBox02">
+               <div onclick="OpenPizza()" class="box bigBox bigBox02">
                   <p>Пицца</p>
                </div>
                <div class="box bigBox bigBox03">
